# ValveControl

./: .gitignore  CMakeLists.txt  README.md  main.cpp  requirement.md
coco/src/: ValveControllerImpl.coco  ValveHAL.coco
coco_examples/: .project  Coco.toml
coco_examples/Example_01A/: .project  Coco.toml
coco_examples/Example_01B/: .project  Coco.toml
coco_examples/Example_02A/: .project  Coco.toml
coco_examples/Example_02B/: .project  Coco.toml
coco_examples/Example_02C/: .project  Coco.toml
coco_examples/Example_02D/: .project  Coco.toml
coco_examples/Example_03A/: .project  Coco.toml
coco_examples/Example_03B/: .project  Coco.toml
coco_examples/Example_03C/: .project  Coco.toml
coco_examples/Example_04A/: .project  Coco.toml
coco_examples/Example_04B/: .project  Coco.toml
coco_examples/Example_04C/: .project  Coco.toml
coco_examples/Example_04D/: .project  Coco.toml
coco_examples/Example_04E/: .project  Coco.toml
coco_examples/Example_05A/: .project  Coco.toml
coco_examples/Example_05B/: .project  Coco.toml
coco_examples/Example_05C/: .project  Coco.toml
coco_examples/Example_05D/: .project  Coco.toml
coco_examples/Example_05E/: .project  Coco.toml
coco_examples/Example_06A/: .project
coco_examples/Example_06B/: .project  Coco.toml
coco_examples/Example_06C/: .project  Coco.toml
dezyne/: NEWS  NEWS.ide  README  README.ide  dzn.cmd  guile.cmd  ide.cmd  output.7z
include/: valve_controller.h  valve_driver.h  valve_hal.h  valve_types.h
src/: simulator_impl.cpp  valve_controller.cpp  valve_driver.cpp
(+722 files in other folders)
